# openacc_play

./: main.cpp
basic/: CMakeLists.txt  main.cpp
cusolver/: CMakeLists.txt  Makefile  main.cpp
